--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<form [formGroup] = "formLogin">
+  <div class="row">
+    <label for="" class="type-font">Login</label>
+    <br>
+    <div class="form-group" >
+      <input type="text" placeholder="username" formControlName="username" >
+    </div>
+    <br>
+    <div class="form-group">
+      <input type="password" placeholder="Password" formControlName="password" >
+    </div>
+    <br>
+    <button type="submit" (click)="sendLogin()">Login</button>
+  </div>
+</form>
