--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,15 +1,94 @@
 .row{
     text-align: center;
+    background: #2F4F4F;
+    padding: 20px;
+    width: auto;
+    border-radius: 5pt;
 }
 
-.form-group{
-
+.contenedorP{
+   background-color: aquamarine;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 3;
+    top: 0;
+    overflow: hidden;
 }
 
-.type-font{
-    font-size: 12pt;
+.contenedor2{
+    width: 100%;
+    height: 90%;
+    /*background-color: red;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    
+}
+
+input{
+    font-size: 25px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    padding: 4px;
 }
 
 input{
     text-align: center;
+}
+
+label{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 30px;
+    color: white;
+}
+
+.foter{
+    background-color: #2F4F4F;
+    color: white;
+    text-align: right;
+    padding: 20px;
+    font-size: 20px;
+    height: 4%;   
+}
+.iconoUser{
+    width: 55%;
+    height: 50%;
+    background:#7B68EE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 5pt;
+}
+
+img{
+    height: 80%;
+}
+
+.boton{
+    background-color:#2F4F4F;
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    border:none;
+    padding: 10px;
+    text-align: center;
+    margin-top: 5px;
+    width: 50%;
+    border-radius: 5pt;
+    border:2px solid white;
+    cursor: pointer;
+    outline: none;
+    transition-duration: 0.5s, 1s;
+}
+
+
+.boton:hover{
+    background: #708090;
+    
 }
