--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,7 +7,7 @@
 }
 
 .contenedorP{
-   background-color: aquamarine;
+   /* background-color: aquamarine;*/
     width: 100%;
     height: 100%;
     position: absolute;
